feat(portal): complete Phase 2 Module 3 Family Members and access permissions system